--- a/main.css
+++ b/main.css
@@ -191,8 +191,7 @@ p {
 
 .container .intro {
   margin: 0;
-  background-color: #252528;
-  background: url("images/bg.png") no-repeat;
+  background: #252528 url("http://7xj46o.com1.z0.glb.clouddn.com/bg.png") no-repeat;
   background-size: cover;
   background-position: center;
   height: 881px;
